Update environment_setup.md